<resources>
    <string name="app_name">Haelthy Calories</string>
    <string name="login_title">Login</string>
    <string name="email_login">Email</string>
    <string name="pass_login">Password</string>
    <string name="login_but">LOG IN</string>
    <string name="notmem">Not a Member?</string>
    <string name="register">Register</string>
    <string name="exercise">Exercise</string>
    <string name="ADD">Add</string>
    <string name="healthy_calories">Healthy Calories</string>
    <string name="app_logo">app_logo</string>
    <string name="login">Login</string>
    <string name="vconfirm">Verify Confirm</string>
    <string name="regis_success">Registered Successfully</string>
    <string name="activity_title">Activity</string>
    <string name="food">Food</string>
    <string name="ex">Act_ex</string>
    <string name="act_food">act_food</string>
    <string name="name_reg">Name</string>
    <string name="register_title">Register</string>
    <string name="confirmpass_reg">Confirm Password</string>
    <string name="submit_reg">Submit</string>
    <string name="email_reg">Email</string>
    <string name="pass_reg">Password</string>
    <string name="login_but_main">LOGIN</string>
    <string name="login_but_login">LOGIN</string>
    <string name="foodbf">FoodBreakfast</string>
    <string name="breaktext">Breakfast</string>
    <string name="foodlu">FoodLunch</string>
    <string name="fooddi">FoodDinner</string>
    <string name="foodsn">FoodSnack</string>
    <string name="lunchtext">Lunch</string>
    <string name="dinnertext">Dinner</string>
    <string name="snacktext">Snack</string>
    <string name="bar">Healthy Calories</string>
    <string name="bar_act">Activity</string>
    <string name="bar_reg">Healthy Calories</string>
    <string name="bar_con">Healthy Calories</string>
    <string name="drawer_act">drawer</string>
    <string name="heltext">Hello!</string>
    <string name="aipic">Picture</string>
    <string name="but_act">Activity</string>
    <string name="but_tre">Trend</string>
    <string name="but_for">For you</string>
    <string name="bar_food">Food</string>
    <string name="bar_ex">Exercise</string>
    <string name="bar_break">Breakfast</string>
    <string name="phototext">Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="loctext">Location</string>
    <string name="add_but_lob">Add</string>
    <string name="menutext">Menu</string>
    <string name="add_but_meb">Add</string>
    <string name="bar_lunch">Lunch</string>
    <string name="phototext_l">Photo</string>
    <string name="add_photo_l">Add Photo</string>
    <string name="lotext_l">Location</string>
    <string name="add_but_lol">Add</string>
    <string name="menutext_l">Menu</string>
    <string name="add_but_mel">Add</string>
    <string name="bar_dinner">Dinner</string>
    <string name="phototext_d">Photo</string>
    <string name="add_photo_d">Add Photo</string>
    <string name="lotext_d">Location</string>
    <string name="add_but_lod">Add</string>
    <string name="menutext_d">Menu</string>
    <string name="add_but_med">Add</string>
    <string name="bar_snack">Snack</string>
    <string name="phototext_s">Photo</string>
    <string name="add_photo_s">Add</string>
    <string name="lotext_s">Location</string>
    <string name="add_but_los">Add</string>
    <string name="menutext_s">Menu</string>
    <string name="add_but_mes">Add</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="manu">Manu</string>
    <string name="total_cal">Total</string>
    <string name="add_but_ex_loca">ADD</string>
    <string name="add_but_ex_manu">ADD</string>
    <string name="rec_but">Record</string>
    <string name="hour_but">Minute</string>
    <string name="rec_but_b">Record</string>
    <string name="add_pb">Add</string>
    <string name="add_dp">Add</string>
    <string name="add_pl">Add</string>
    <string name="add_ps">Add</string>
    <string name="bar_foryou">For You</string>
    <string name="img_foryou">Foryou</string>
    <string name="foryou_min">60 min</string>
    <string name="textDes">Activity time target</string>
    <string name="img_run">IMG</string>
    <string name="run_c">Running Courses</string>
    <string name="dt_run">Detail : Running </string>
    <string name="hi">Activity For You Today!</string>
    <string name="img_yoga">IMG</string>
    <string name="yoga_c">Yoga Body Balance</string>
    <string name="dt_yoga">Detail : Yoga </string>
    <string name="textacc">Activity</string>
    <string name="imgprof">Image</string>
    <string name="but_change">Change</string>
    <string name="dt_run_cal">Calories Burn : 596</string>
    <string name="minofrun">60 min</string>
    <string name="dt_yoga_cal">Calories Burn : 240</string>
    <string name="yogaofmin">60 min</string>
    <string name="date_break">Date</string>
    <string name="add_date_b">Add</string>
    <string name="inputmin"> Input Minute</string>
    <string name="bar_setting">Setting</string>
    <string name="nametext_set">Name</string>
    <string name="pencil">Add</string>
    <string name="email_set">Email</string>
    <string name="change_language">Change to Thai</string>
    <string name="infortext">User Information</string>
    <string name="gender_set">Sex</string>
    <string name="bod_set">Birthday</string>
    <string name="hight_set">Hight</string>
    <string name="weight_set">Weight</string>
    <string name="update_set">UPDATE</string>
    <string name="date_lunch">Date</string>
    <string name="add_date_l">Add</string>
    <string name="date_din">Date</string>
    <string name="add_date_d">Add</string>
    <string name="date_sn">Date</string>
    <string name="add_date_sn">Add</string>
    <string name="date_exer">Date</string>
    <string name="add_date_ex">Add</string>
    <string name="bar_update">Update</string>
    <string name="textupdate">Update</string>
    <string name="ubname_ac">Food Name</string>
    <string name="cal_up">Input Calorie</string>
    <string name="explainfor">For update calorie of food</string>
    <string name="update_but_update">UPDATE</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_total_b">Total</string>
    <string name="itemofb" />
    <string name="search_food_b">Food Name</string>
    <string name="qurtext">Quantity</string>
    <string name="num_food_b">Input quantity</string>
    <string name="add_but_numb">Add</string>
    <string name="item2ofb" />
    <string name="search_food_d">Food Name</string>
    <string name="total_d">Total</string>
    <string name="qtext_d">Quantity</string>
    <string name="q_input_d">Input quantity</string>
    <string name="add_qd">Add</string>
    <string name="total_dinner">Total</string>
    <string name="itemofd" />
    <string name="item2ofd" />
    <string name="search_food_l">Food Name</string>
    <string name="qtext_l">Quantity</string>
    <string name="num_food_l">Input quantity</string>
    <string name="add_but_numl">Add</string>
    <string name="total_lunch">Total</string>
    <string name="itemofl" />
    <string name="item2ofl" />
    <string name="search_food_sn">Food Name</string>
    <string name="qtext_sn">Quantity</string>
    <string name="num_food_sn">Input quantity</string>
    <string name="add_num_sn">Add</string>
    <string name="total_sn">Total</string>
    <string name="itemofsn" />
    <string name="item2of" />
    <string name="itemex" />
    <string name="rec_b">Record</string>
    <string name="item3ofb" />
    <string name="item3ofd" />
    <string name="rec_d">Record</string>
    <string name="item3ofl" />
    <string name="rec_l">Record</string>
    <string name="item3ofsn" />
    <string name="rec_sn">Record</string>
    <string name="itemSex" />
    <string name="textname_set" />
    <string name="bar_trend">Trend</string>
    <string name="day_but">Day</string>
    <string name="month_but">Month</string>
    <string name="week_but">Week</string>
    <string name="set_hight" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overall_day">0 KCal</string>
    <string name="calOfday">Calories</string>
    <string name="numCalday">0 KCal</string>
    <string name="burnCalday">Burn Calories</string>
    <string name="numBurnday">0 KCal</string>
    <string name="addTdate">Date</string>
    <string name="overall_week">0 KCal</string>
    <string name="calOfweek">Calories</string>
    <string name="numCalweek">0 KCal</string>
    <string name="burnCalweek">Burn Calories</string>
    <string name="numBurnweek">0 KCal</string>
    <string name="overall_month">0 KCal</string>
    <string name="calOfmonth">Calories</string>
    <string name="numCalmonth">0 KCal</string>
    <string name="burnCalmonth">Burn Calories</string>
    <string name="numBurnmonth">0 KCal</string>
    <string name="bt_location_search">Search</string>
    <string name="lolo">Enter Place Name</string>
    <string name="tv_address">Address</string>
    <string name="google_location">Location</string>
    <string name="lolo_b">Enter Place Name</string>
    <string name="bt_location_search_b">Search</string>
    <string name="tv_address_b">Address</string>
    <string name="google_location_b">Location</string>
    <string name="recode_map_button_b">Record</string>
    <string name="lolo_l">Enter Place Name</string>
    <string name="bt_location_search_l">Search</string>
    <string name="tv_address_l">Address</string>
    <string name="google_location_l">Location</string>
    <string name="recode_map_button_l">Record</string>
    <string name="lolo_d">Enter Place Name</string>
    <string name="bt_location_search_d">Search</string>
    <string name="tv_address_d">Address</string>
    <string name="google_location_d">Location</string>
    <string name="recode_map_button_d">Record</string>
    <string name="lolo_s">Enter Place Name</string>
    <string name="bt_location_search_s">Search</string>
    <string name="tv_address_s">Address</string>
    <string name="google_location_s">Location</string>
    <string name="recode_map_button_s">Record</string>
    <string name="logout">Logout</string>
    <string name="viewCal">view</string>
    <string name="viewDelete">Delete</string>
    <string name="delete_date">Date</string>
    <string name="but_delete">Delete</string>
    <string name="deleteText">Delete</string>
    <string name="hinddelext" translatable="false" />
    <string name="hind2delete" translatable="false" />
    <string name="bar_delete">Delete</string>

    <string-array name="arrExercise">
        <item>Add Exercise</item>
        <item>Running</item>
        <item>Walking</item>
        <item>Cycling</item>
        <item>Swimming</item>
        <item>Yoga</item>
    </string-array>
    <string-array name="arrGender">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
