<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_activity"
            android:title="@string/activity_title" />
        <item
            android:id="@+id/nav_trend"
            android:title="@string/bar_trend" />
        <item
            android:id="@+id/nav_foryou"
            android:title="@string/bar_foryou" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/bar_setting" />

    </group>

    <group>
        <item
            android:id="@+id/nav_update"
            android:title="@string/bar_update" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"/>
    </group>

</menu>