<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#F0ADA7"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

<!--                <ImageView-->
<!--                    android:id="@+id/drawer_act"-->
<!--                    android:layout_width="60dp"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:background="#F0ADA7"-->
<!--                    android:paddingVertical="15dp"-->
<!--                    android:contentDescription="@string/drawer_act"-->
<!--                    app:srcCompat="@drawable/menu" />-->

                <TextView
                    android:id="@+id/bar_lunch"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="#FFFFFF"
                    android:background="#F0ADA7"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/bar_lunch" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/block_corner"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/phototext_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phototext_l"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/add_photo_l"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/add_photo_l"
                app:srcCompat="@drawable/add" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:background="@drawable/block_corner"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_lunch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/date_lunch"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/add_date_l"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/addbutto"
                android:paddingHorizontal="50dp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:text="@string/add_date_l" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_corner"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menutext_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menutext_l"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_food_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/block_corner"
                    android:hint="@string/search_food_l"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/add_but_mel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/addbutto"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:text="@string/add_but_mel"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_corner"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/qtext_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/qtext_l" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/num_food_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ems="10"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/block_corner"
                    android:hint="@string/num_food_l"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/add_but_numl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/addbutto"
                    android:paddingHorizontal="50dp"
                    android:paddingVertical="10dp"
                    android:textColor="#000000"
                    android:text="@string/add_but_numl" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/block_corner"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/total_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/total_lunch" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/itemofl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/itemofl" />

                <TextView
                    android:id="@+id/item2ofl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/item2ofl" />

                <TextView
                    android:id="@+id/item3ofl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/item3ofl" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/rec_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:background="@drawable/css_but"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:text="@string/rec_l" />


</LinearLayout>

